# biofeed

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/biofeed/: __init__.py
src/biofeed/cli/: __init__.py  commands.py
src/biofeed/core/: controller.py  formatter.py
src/biofeed/feeds/: article.py  cache.py  feed_parser.py  feed_source.py  registry.py
src/biofeed/utils/: config.py
src/reader/: __init__.py  __main__.py  controller.py  formatter.py
src/reader/feeds/: atom.py  base.py  cache.py  feed_parser.py  feed_source.py  feeds.json  registry.py  rss.py
tests/: test-sample-rss.xml  test_all_feeds.py  test_feed_parser.py  test_single_feed.py
tests/core/: test_controller.py
tests/feeds/: test_entries.py  test_feedsource.py  test_single_feed.py
tests/feeds/fixtures/: biorxiv_20250413.xml  bmc_20250413.xml  nature_20250319.xml  plos_20250413.xml
tests/fixtures/: feeds.json
